# rust-netlify-function

./: Cargo.toml  README.md  netlify.toml  package.json
.netlify/: state.json
functions/hello/: hello.js
functions/hello/pkg/: package.json  rust_netlify_function.js  rust_netlify_function_bg.wasm
src/: lib.rs
