[package]
name = "rust-netlify-function"
version = "0.1.0"
authors = ["Brian 'bdougie' Douglas <ilikerobot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.65"
